--- a/docs/css/10_homepage.css
+++ b/docs/css/10_homepage.css
@@ -32,13 +32,13 @@ h4 {
 }
 
 .intro,
-.interaction {
+#interaction {
     background-color: var(--sw-14-5);
 }
 
 .demo,
 .visual,
-.m_cd_3 {
+#m_cd_3 {
     background-color: var(--sw-15);
 }
 
@@ -98,6 +98,7 @@ li + li {
     display: grid;
     grid-template-columns: var(--grid-stats-123);
     grid-gap: var(--margin-m);
+
 }
 
 .stats li {
@@ -146,7 +147,7 @@ li + li {
     column-gap: var(--margin-l);
 }
 
-.intro div:nth-child(2) {
+.intro .w-wrapper div:nth-child(2) {
     margin-top: var(--margin-l);
 }
 
@@ -217,9 +218,7 @@ li + li {
 }
 
 .interaction {
-    --minfigureh: initial;
     display: flex;
-    flex-wrap: wrap;
     align-items: flex-start;
 }
 
@@ -237,6 +236,7 @@ li + li {
     height: 450px;
     object-fit: cover;
     object-position: right;
+    margin-left: auto;
     box-shadow: var(--boxshadow-card);
 }
 
@@ -244,11 +244,15 @@ li + li {
     height: 300px;
     object-fit: cover;
     object-position: right;
+    margin-left: auto;
     box-shadow: var(--boxshadow-card);
 }
 
 .interaction > figure > img:nth-child(3) {
-    object-fit: fill;
+    object-fit: cover;
+    object-position: top;
+    width: 100%;
+    max-height: 600px;
     box-shadow: var(--boxshadow-card);
 }
 
