--- a/docs/css/03_components.css
+++ b/docs/css/03_components.css
@@ -361,14 +361,16 @@
     transition: var(--02transition);
 }
 /*delayed transition for logo and bg changes */
-.card:hover .card-logo-hover {
+.card:hover .card-logo-hover,
+.card:focus-within .card-logo-hover {
     opacity: 1;
     transition: opacity 0.2s 0.2s ease-in-out;
 }
 .card-img-filter {
     transition: filter 0.2s 0.2s ease-in-out, transform 0.2s 0.2s ease-in-out;
 }
-.card:hover .card-img-filter {
+.card:hover .card-img-filter,
+.card:focus-within .card-img-filter {
     filter: saturate(0.7) brightness(0.8);
     transition: var(--02transition);
 }
@@ -381,7 +383,8 @@
     transition: var(--02transition);
     transform-origin: top right;
 }
-.card:hover .card-ribbon {
+.card:hover .card-ribbon,
+.card:focus-within .card-ribbon{
     transform: scale(1.1);
 }
 
@@ -424,7 +427,8 @@
     transition: var(--02transition);
 /*    -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), 0%, rgba(0, 0, 0, 1));*/
 }
-.card.figimgcover:hover img {
+.card.figimgcover:hover img,
+.card.figimgcover:focus-within img {
     transform: scale(1.2);
 }
 .card.figimgcover::after {
@@ -436,7 +440,8 @@
     bottom: 0;
     transition: var(--01transition-out);
 }
-.card.figimgcover:hover::after {
+.card.figimgcover:hover::after,
+.card.figimgcover:focus-within::after {
     height: 80%;
 }
 .card.figimgcover section {
